--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,9 @@
 <resources>
     <string name="app_name">CriminalIntent</string>
+    <string name="crime_title_hint">Введите заголовок для преступления.</string>
+    <string name="crime_title_label">Заголовок</string>
+    <string name="crime_details_label">Детали</string>
+    <string name="crime_solved_label">Разрешён</string>
+    <string name="default_crime_title">Crime Title</string>
+    <string name="default_crime_date">Crime date</string>
 </resources>
