новое дилоговое окно

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="crime_solved_label">Разрешён</string>
     <string name="default_crime_title">Crime Title</string>
     <string name="default_crime_date">Crime date</string>
+    <string name="date_picker_title">Дата кражи:</string>
 </resources>
