--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,12 @@
     <string name="crime_title_label">Заголовок</string>
     <string name="crime_details_label">Детали</string>
     <string name="crime_solved_label">Разрешён</string>
-    <string name="default_crime_title">Crime Title</string>
-    <string name="default_crime_date">Crime date</string>
-    <string name="date_picker_title">Дата кражи:</string>
-    <string name="time_picker_title">Время кражи:</string>
+    <string name="default_crime_title">Загловок преступления</string>
+    <string name="default_crime_date">Дата преступления</string>
+    <string name="date_picker_title">Дата преступления:</string>
+    <string name="time_picker_title">Время преступления:</string>
     <string name="new_crime">Новой преступление</string>
-    <string name="show_subtitles">Показать заголовки</string>
-    <string name="hide_subtitles">Скрыть заголовки</string>
+    <string name="show_subtitle">Показать подзаголовок</string>
+    <string name="hide_subtitle">Скрыть подзаголовок</string>
     <string name="subtitle_format">%1$d преступлений</string>
 </resources>
